# nanoLLMServe

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: __init__.py  benchmark_block_manager.py  benchmark_chunked_prefill.py  benchmark_generate.py  benchmark_prefix_cache.py
docs/: ARCHITECTURE.md  CICD.md  QUALITY_SCORE.md  RELIABILITY.md  REPO_COLLAB_GUIDE.md  SECURITY.md  SUPPLY_CHAIN_SECURITY.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: nano-llm-serve-roadmap.md
docs/histories/2026-05/: 20260516-1206-remove-unused-cicd.md  20260516-1858-record-oniond-model-weights.md  20260516-1913-add-reference-implementation-guidance.md  20260516-1921-implement-v0-naive-generation.md  20260516-2005-freeze-package-layout.md  20260516-2010-expand-v0-test-coverage.md  20260517-1824-add-openai-compatible-server.md  20260517-2031-add-kv-cache-decode.md  20260518-1634-implement-v0-3-static-batching.md  20260518-2110-implement-v0-3-responses-parity.md  20260519-0915-quick-fix-v0-3-export-and-version.md  (+4 more)
docs/product-specs/: llm-serving-roadmap.md
docs/releases/: feature-release-notes.md
scripts/: check-repo-hygiene.sh
src/nanollmserve/: __init__.py
tests/: test_benchmark_block_manager.py  test_benchmark_chunked_prefill.py  test_benchmark_generate.py  test_benchmark_prefix_cache.py  test_block_manager.py  test_cli.py  test_engine.py  test_hf_runner.py  test_openai_server.py  test_prefix_cache.py  test_protocol.py  test_request_state.py  test_sampling.py
(+43 files in other folders)
